Added service manipulation support
